# Calculator

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/controller/: AppObservers.h  CMakeLists.txt  Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  CommandManager.cpp  CommandManager.h  Controller.cpp  Controller.h  ICommand.cpp  ICommand.h
src/plugin/: CMakeLists.txt  DynamicLoader.h  PlatformFactory.cpp  PlatformFactory.h  Plugin.h  PluginLoader.cpp  PluginLoader.h  PosixDynamicLoader.h  PosixFactory.h  StackPluginInterface.cpp  StackPluginInterface.h  WindowFactory.h  WindowsDynamicLoader.h
src/stack/: CMakeLists.txt  Stack.cpp  Stack.h
src/ui/: CMakeLists.txt  CommandButton.cpp  CommandButton.h  Display.cpp  Display.h  GuiModel.cpp  GuiModel.h  InputWidget.cpp  InputWidget.h  InputWidgetImpl.cpp  InputWidgetImpl.h  LookAndFeel.cpp  LookAndFeel.h  MainWindow.cpp  MainWindow.h  MainWindowImpl.cpp  MainWindowImpl.h  UserInterface.h
src/utilities/: CMakeLists.txt  Exception.h  Observer.cpp  Observer.h  Publisher.cpp  Publisher.h
tests/: CMakeLists.txt
tests/controller/: CMakeLists.txt  ControllerTest.cpp  ControllerTest.h
tests/stack/: CMakeLists.txt  TestStack.cpp  TestStack.h
